--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>( ゜- ゜)つロ干杯~</title>
+  <title>( ゜- ゜)つロ干杯~~~</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="shortcut icon" href="/public/favicon.ico">
   <link rel="stylesheet" type="text/css" href="/public/css/header.css">
